# haloween_embedded

./: .gitignore  CMakeLists.txt  README.md  haloween_embedded.code-workspace  promicro_nrf52840_ghostzipline.overlay  readme.md
applications/ghost_zipline/: CMakeLists.txt  Kconfig  README.md  VERSION  memory_calculation.py  prj.conf  promicro_nrf52840_ghostzipline.overlay  sysbuild.conf
applications/ghost_zipline/src/: main.c
applications/ghost_zipline/src/application/: application.c  application.h
applications/ghost_zipline/src/bluetooth/: bluetooth.c  bluetooth.h
applications/ghost_zipline/src/hardware/: vdd_level.c
applications/halloween_mp3/: Readme.md  platformio.ini
applications/halloween_mp3/src/: main.cpp
applications/main_controller/: CMakeLists.txt  nrf7002dk_nrf5340_cpuapp_ns.overlay  prj.conf  promicro_nrf52840_ghostzipline.overlay
applications/main_controller/src/: main.c
applications/main_controller/src/driver/: dfplayer.c  dfplayer.h
applications/main_controller/src/hardware/: vdd_level.h
applications/mp3_mixing/: run.py
docs/: overview.drawio
src/: main.c
